Header, mobile menu, js, кнопка переключения фона, правки

--- a/index.html
+++ b/index.html
@@ -47,16 +47,13 @@
         </div>
         <div class="container-footer">
           <img
-            src="./images/icons/suny-day.svg"
+            src="./images/icons/sun_theme-day.svg"
             alt="Иконка: Солнышко"
             class="container-footer__sun"
           />
-          <button
-            type="button"
-            class="container-footer__btn container-footer__btn_on"
-          ></button>
+          <button type="button" class="container-footer__btn"></button>
           <img
-            src="./images/icons/moonlight-night.png"
+            src="./images/icons/moon_theme-day.svg"
             alt="Иконка: Луна"
             class="container-footer__moon"
           />
