feat: Добавлен блок: Шоссе, ТТ Грэвел

--- a/index.html
+++ b/index.html
@@ -59,6 +59,37 @@
           />
         </div>
       </section>
+      <!-- Шоссе, ТТ и Грэвел -->
+      <section class="typestart">
+        <div class="typestart-info">
+          <h1 class="typestart-info__title">Шоссе, ТТ и&nbsp;Грэвел</h1>
+          <p class="typestart-info__paragraph">
+            Триатлонные старты, горные серпантины или грейвел заезды по
+            живописным маршрутам – нужно только определиться с выбором
+            велосипеда и отправиться в путь.
+          </p>
+          <a href="#" class="typestart-info__link">Подробнее</a>
+          <div class="typestart-info__system">
+            <span class="typestart-info__system-text"
+              >Cannondale&nbsp;Systemsix</span
+            >
+            <span class="typestart-info__system-hatch"></span>
+          </div>
+        </div>
+        <img
+          src="./images/forest.png"
+          alt="Фото: Лесная дорога "
+          class="typestart-info__foto-way"
+        />
+        <div class="typestart-info__limiter">
+          <img
+            src="./images/cannondale.png"
+            alt="Фото: Велосипед "
+            class="typestart-info__foto-bike"
+          />
+        </div>
+      </section>
+      <section class="tiser"></section>
     </main>
     <footer class="footer"></footer>
     <script src="./js/main.js" defer></script>
