feat: Добавлен блок: Цитата - 'Катайся много или мало...'

--- a/index.html
+++ b/index.html
@@ -89,7 +89,22 @@
           />
         </div>
       </section>
-      <section class="tiser"></section>
+      <section class="quote">
+        <img
+          class="quote__foto"
+          src="./images/hills-and-road.png"
+          alt="Фото: Холмы и дорога"
+        />
+        <div class="quote__info">
+          <p class="quote__info-text">
+            «Катайся много или мало, долго или коротко, как хочешь - но катайся»
+          </p>
+          <div class="quote__author">
+            <span class="quote__author-name">Эдди Меркс</span>
+            <span class="quote__author-profsport">Велогонщик</span>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
     <script src="./js/main.js" defer></script>
