feat: добавлены секции Шоссе и Велосипед

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         />
         <div class="typestart-info__limiter">
           <img
-            src="./images/cannondale.png"
+            src="./images/sys-cannondaleSystemsix.png"
             alt="Фото: Велосипед "
             class="typestart-info__foto-bike"
           />
@@ -92,7 +92,7 @@
       <section class="quote">
         <img
           class="quote__foto"
-          src="./images/hills-and-road.png"
+          src="./images/road-hills.png"
           alt="Фото: Холмы и дорога"
         />
         <div class="quote__info">
@@ -104,6 +104,85 @@
             <span class="quote__author-profsport">Велогонщик</span>
           </div>
         </div>
+      </section>
+      <!-- секция Дороги -->
+      <section class="road">
+        <h2 class="road__title">Шоссе</h2>
+        <p class="road__paragraph">
+          На шоссейном велосипеде можно ездить по асфальту на разных градиентах:
+          будь то горы или равнины. Гонки проходят в командном пелотоне, но
+          тренироваться можно и самостоятельно.
+        </p>
+        <div class="road__foto">
+          <img
+            class="road__img"
+            src="./images/road-mountain.png"
+            alt="фото: Дорога шоссе"
+          />
+          <img
+            class="road__img"
+            src="./images/road-country.png"
+            alt="фото: Дорога просёлочная"
+          />
+          <!-- признак дороги  -->
+          <div class="road__sign">
+            <img
+              class="road__sign-svg"
+              src="./images/icons/line-curve.svg"
+              alt="Линия"
+            />
+          </div>
+        </div>
+        <!-- кнопки -->
+        <div class="road__buttons">
+          <button type="button" class="road__button road__button-prev"></button>
+          <button type="button" class="road__button road__button-next"></button>
+        </div>
+      </section>
+      <!-- Секция Велосипеды -->
+      <section class="bike">
+        <div class="bike__name">
+          <h2 class="bike__name-title">Велосипеды</h2>
+          <ul class="bike__name-items">
+            <li class="bike__name-item">
+              <a href="#" class="bike__name-link bike__name-link_selected"
+                >Шоссе</a
+              >
+            </li>
+            <li class="bike__name-item">
+              <a href="#" class="bike__name-link">Грэвел</a>
+            </li>
+            <li class="bike__name-item">
+              <a href="#" class="bike__name-link">ТТ</a>
+            </li>
+          </ul>
+        </div>
+        <ul class="bike__systems">
+          <li class="bike__system">
+            <img
+              src="./images/sys-cerveloCaledon.png"
+              alt="Фото: велосипед"
+              class="bike__system-foto"
+            />
+            <span class="bike__system-name">Cervelo Caledonia-5</span>
+          </li>
+          <li class="bike__system">
+            <img
+              src="./images/sys-cannondaleSystemsix.png"
+              alt="Фото: велосипед"
+              class="bike__system-foto"
+            />
+            <span class="bike__system-name">Cannondale Systemsix Himod</span>
+          </li>
+          <li class="bike__system">
+            <img
+              src="./images/sys-trekDomane.png"
+              alt="Фото: велосипед"
+              class="bike__system-foto"
+            />
+            <span class="bike__system-name">Trek Domane SL-7</span>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer"></footer>
