feat: Блок тренировки

--- a/index.html
+++ b/index.html
@@ -184,6 +184,30 @@
           </li>
         </ul>
       </section>
+      <!-- Секция Тренировки -->
+      <section class="training">
+        <div class="training__info">
+          <h2 class="training__info-title">Тренировки</h2>
+          <p class="training__info-paragraph">
+            Чтобы найти маршрут для тренировки можно воспользоваться сервисом
+            Komoot, а записать эти тренировки поможет приложение Strava, а также
+            это приложение позволит построить тренировочный план.
+          </p>
+          <ul class="training__programs">
+            <li class="training__program">
+              <a href="#" class="training__program-link">Strava</a>
+            </li>
+            <li class="training__program">
+              <a href="#" class="training__program-link">Komoot</a>
+            </li>
+          </ul>
+        </div>
+        <img
+          class="training__foto"
+          src="./images/road-uphill.png"
+          alt="Фото: подъём дороги"
+        />
+      </section>
     </main>
     <footer class="footer"></footer>
     <script src="./js/main.js" defer></script>
