fix: Страница Грэвел

--- a/grevel.html
+++ b/grevel.html
@@ -75,7 +75,7 @@
           <a href="#" class="typestart-info__link">Подробнее</a>
           <div class="typestart-info__system">
             <span class="typestart-info__system-text text_color"
-              >Cannondale&nbsp;Systemsix</span
+              >Specialized&nbsp;S-Works</span
             >
             <span class="typestart-info__system-hatch"></span>
           </div>
@@ -87,7 +87,7 @@
         />
         <div class="typestart-info__limiter">
           <img
-            src="./images/sys-cannondaleSystemsix.png"
+            src="./images/sys-S-WorksDiverge.png"
             alt="Фото: Велосипед "
             class="typestart-info__foto-bike"
           />
@@ -111,40 +111,40 @@
       </section>
       <!-- секция Дорога -->
       <section class="road">
-        <h2 class="road__title text_color">Шоссе</h2>
+        <h2 class="road__title text_color">Грэвел</h2>
         <p class="road__paragraph text_color-l">
-          На шоссейном велосипеде можно ездить по асфальту на разных градиентах:
-          будь то горы или равнины. Гонки проходят в командном пелотоне, но
-          тренироваться можно и самостоятельно.
+          Грэвел похож на шоссейный велосипед, но конструкция рамы немного
+          отличается, и на нём стоят более широкие покрышки, всё для того чтобы
+          проехать по лёгкому бездорожью.
         </p>
         <div class="road__foto">
-          <img
-            class="road__img"
-            src="./images/road-mountain.png"
-            alt="фото: Дорога шоссе"
-          />
           <img
             class="road__img"
             src="./images/road-country.png"
             alt="фото: Дорога просёлочная"
           />
+          <img
+            class="road__img"
+            src="./images/road-highway.png"
+            alt="фото: Дорога шоссе"
+          />
           <!-- признак дороги  -->
           <div class="road__sign">
             <img
-              class="road__sign-svg"
-              src="./images/icons/line-curve.svg"
+              class="road__sign-svggrevel"
+              src="./images/icons/line-wavy.svg"
               alt="Линия"
             />
           </div>
         </div>
         <!-- кнопки -->
         <div class="road__buttons">
-          <button type="button" class="road__button road__button-prev"></button>
           <button
             type="button"
-            class="road__button road__button-next"
-            onclick="document.location='grevel.html'"
+            class="road__button road__button-prev"
+            onclick="document.location='index.html'"
           ></button>
+          <button type="button" class="road__button road__button-next"></button>
         </div>
       </section>
       <!-- Секция Велосипеды -->
@@ -153,14 +153,14 @@
           <h2 class="bike__name-title text_color">Велосипеды</h2>
           <ul class="bike__name-items">
             <li class="bike__name-item">
+              <a href="#" class="bike__name-link text_color-l">Шоссе</a>
+            </li>
+            <li class="bike__name-item">
               <a
                 href="#"
                 class="bike__name-link bike__name-link_selected text_color"
-                >Шоссе</a
+                >Грэвел</a
               >
-            </li>
-            <li class="bike__name-item">
-              <a href="#" class="bike__name-link text_color-l">Грэвел</a>
             </li>
             <li class="bike__name-item">
               <a href="#" class="bike__name-link text_color-l">ТТ</a>
@@ -170,31 +170,33 @@
         <ul class="bike__systems">
           <li class="bike__system">
             <img
-              src="./images/sys-cerveloCaledon.png"
+              src="./images/sys-cerveloAspero.png"
               alt="Фото: велосипед"
               class="bike__system-foto"
             />
             <span class="bike__system-name text_color"
-              >Cervelo Caledonia-5</span
+              >Cervelo Aspero GRX 810</span
             >
           </li>
           <li class="bike__system">
             <img
-              src="./images/sys-cannondaleSystemsix.png"
+              src="./images/sys-S-WorksDiverge.png"
               alt="Фото: велосипед"
               class="bike__system-foto"
             />
             <span class="bike__system-name text_color"
-              >Cannondale Systemsix Himod</span
+              >Specialized S-Works Diverge</span
             >
           </li>
           <li class="bike__system">
             <img
-              src="./images/sys-trekDomane.png"
+              src="./images/sys-cannondaleTopstone.png"
               alt="Фото: велосипед"
               class="bike__system-foto"
             />
-            <span class="bike__system-name text_color">Trek Domane SL-7</span>
+            <span class="bike__system-name text_color"
+              >Cannondale Topstone Lefty 3</span
+            >
           </li>
         </ul>
       </section>
